[gd_scene load_steps=4 format=3 uid="uid://7donq6nh2xu3"]

[ext_resource type="Script" path="res://timelapse_screen.gd" id="1_qwmaf"]
[ext_resource type="Texture2D" uid="uid://b8bpqp0b8ancs" path="res://img/monalisa2835x4289.jpg" id="2_v3r01"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4i3x8"]
border_width_left = 60
border_width_right = 60

[node name="Time" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qwmaf")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 300)
zoom = Vector2(0.575, 0.575)

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(2835, 4289)
layout_mode = 0
offset_left = -1372.0
offset_top = -539.0
offset_right = 1463.0
offset_bottom = 3750.0
texture = ExtResource("2_v3r01")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 32.0
offset_right = 1888.0
offset_bottom = 1048.0

[node name="TimeElapsed" type="Label" parent="CanvasLayer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Quantidade de árvores perdidas:"

[node name="RedDots" type="Label" parent="CanvasLayer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Número de Pontos Vermelho:"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="HScrollBar" type="HScrollBar" parent="CanvasLayer/MarginContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(1800, 96)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_styles/grabber = SubResource("StyleBoxFlat_4i3x8")

[node name="VScrollBar" type="VScrollBar" parent="CanvasLayer"]
offset_right = 8.0
offset_bottom = 8.0

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -72.0
grow_horizontal = 0
grow_vertical = 2
alignment = 1

[node name="PlayButton" type="Button" parent="CanvasLayer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Play"
